--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,5 +1,5 @@
 <div class="cart-container">
-  <h1>Carrito ID: {{cart._id}}</h1>
+  <h1>Carrito</h1>
   {{#if cart.products.length}}
     <ul class="cart-items">
       {{#each cart.products}}
