creacion de vistas de registro, login y current

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -44,6 +44,10 @@
       </span>
     </a>
   </div>
+
+  <div class="text-center mt-4">
+    <a href="/register" class="btn btn-outline-primary">Registrarse</a>
+  </div>
 </div>
 
 
