--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -139,7 +139,7 @@
             timer: 2000,
             showConfirmButton: false
           });
-          location.href = '/';
+          location.href = '/login';
         } else {
           Swal.fire({
             icon: 'error',
